# cb-photo-loader

./: CLAUDE.md  README.md  cb-photo-loader.service  config.example.toml  pyproject.toml
docs/superpowers/plans/: 2026-06-19-cb-photo-loader.md
docs/superpowers/specs/: 2026-06-19-cb-photo-loader-design.md
src/cb_photo_loader/: __init__.py  __main__.py  clipboard.py  config.py  watcher.py
tests/: test_clipboard.py  test_config.py  test_smoke.py  test_watcher.py
