[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cb-photo-loader"
version = "0.1.0"
description = "Watch a directory and copy newly downloaded images to the clipboard"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["watchdog>=4.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
cb-photo-loader = "cb_photo_loader.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cb_photo_loader"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
